k8s/02-FRONTEND/admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidercom-admin-frontend
  namespace: "2023241041"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lidercom_admin_frontend
  template:
    metadata:
      labels:
        app: lidercom_admin_frontend
    spec:
      hostAliases:
      - ip: "10.42.0.253"
        hostnames:
        - "backend-service"
      containers:
      - name: admin-frontend
        image: arelyxl/lidercom_admin_observer:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend-service
  namespace: "2023241041"
spec:
  type: NodePort
  selector:
    app: lidercom_admin_frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30006
