k8s/02-FRONTEND/superior-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidercom-superior-frontend
  namespace: "2023241041"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lidercom_superior_frontend
  template:
    metadata:
      labels:
        app: lidercom_superior_frontend
    spec:
      hostAliases:
      - ip: "10.42.0.253"
        hostnames:
        - "backend-service"
      containers:
      - name: superior-frontend
        image: arelyxl/lidercom_superior_participante:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: superior-frontend-service
  namespace: "2023241041"
spec:
  type: NodePort
  selector:
    app: lidercom_superior_frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
