k8s/02-FRONTEND/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidercom-frontend-ingress
  namespace: "2023241041"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: admin.lidercom.ady-serv.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-frontend-service
            port:
              number: 80
  - host: superior.lidercom.ady-serv.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superior-frontend-service
            port:
              number: 80
